@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 07-08-2006 fixed: bob deinterlacing wasn't working for dvdplayer, it overwrote texture before displaying second field
  - 07-08-2006 fixed: possible fix for UPnP leak
  - 07-08-2006 fixed: UPnP limit to 256 entries per container.
  - 06-08-2006 fixed: Skin bool settings with value didn't work (and caused eratic behaviour)
